# Porkchop

./: CMakeLists.txt  README.md  assembler.hpp  bin-assembler.hpp  common.hpp  compiler.cpp  compiler.hpp  continuum.cpp  continuum.hpp  descriptor.hpp  diagnostics.cpp  diagnostics.hpp  function.hpp  highlight.cpp  io.hpp  lexer.cpp  lexer.hpp  literal.cpp  literal.hpp  local.cpp  local.hpp  main.cpp  opcode.hpp  parser.cpp  parser.hpp  source.cpp  source.hpp  sourcecode.cpp  sourcecode.hpp  text-assembler.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp  type.hpp  unicode-gen.py  unicode-id.cpp  unicode.hpp  util.hpp
runtime/: assembly.hpp  bin-assembly.hpp  bin-main.cpp  common.hpp  external.cpp  external.hpp  frame.hpp  interpretation.hpp  interpreter.cpp  main.cpp  runtime.cpp  runtime.hpp  shell.cpp  text-asm.hpp  text-assembly.hpp  text-main.cpp  vm.cpp  vm.hpp
test/: 8-queen.pc  8-queen.r  collection.pc  collection.r  coro.pc  fact.pc  fact.r  fib.pc  is-prime.pc  mul-table.pc  test.cpp  withdraw.pc
unicode/: unicode-gen.py  unicode-id.cpp  unicode-width.cpp  unicode.cpp  unicode.hpp
